(broken) auth system - part 2

--- a/player/index.html
+++ b/player/index.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../js/addShapes.js" defer></script>
     <script type="text/javascript" src="../js/sceneLoader.js" defer></script>
 
-    <script type="text/javascript" src="js/shirtDecoder.js" defer></script>
+    <script type="text/javascript" src="js/playerModel.js"></script>
     <script type="text/javascript" src="js/playerObject.js" defer></script>
     <script type="text/javascript" src="js/index.js" defer></script>
     <script type="text/javascript" src="js/fontawesome.js" defer></script>
