improved camera system, and shift lock

--- a/player/index.html
+++ b/player/index.html
@@ -42,6 +42,10 @@
         </div>
     </div>
 
+    <div id="shiftLock" style="display: none;">
+        <i class="fa-solid fa-crosshairs"></i>
+    </div>
+
     <div id="navigation" style="display: none;">
         <img src="../css/HorangHill.png" onclick="toggleSideBar()">
         <progress value="100" max="100" id="health"></progress>
