Update v2.0.5 - GLTF support - Improved physics model for scene nodes (thanks to three-to-cannon) - Moved sidebar to the right - Click to select (experimental)

--- a/player/index.html
+++ b/player/index.html
@@ -22,6 +22,8 @@
     <script type="text/javascript" src="../js/three/SSAOPass.js"></script>
     <script type="text/javascript" src="../js/three/SSAOShader.js"></script>
     <script type="text/javascript" src="../js/three/sky.js"></script>
+    <script type="text/javascript" src="../js/three/gltfLoader.js"></script>
+    <script type="text/javascript" src="../js/three/three-to-cannon.js"></script>
     <script type="text/javascript" src="../js/addShapes.js" defer></script>
     <script type="text/javascript" src="../js/sceneLoader.js" defer></script>
 
