--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 	<script type="text/javascript" src="js/three/TransformControls.js"></script>
 	<script type="text/javascript" src="js/three/sky.js"></script>
 	<script type="text/javascript" src="js/three/gltfExporter.js"></script>
+    <script type="text/javascript" src="js/three/gltfLoader.js"></script>
 </head>
 
 <body>
 	<ul class="ul" id="controls">
-		<li id="logobutton" class="dropdown li"
-			onclick="gd.logicDisplay.importJSON(preset, gd.logicDisplay.components); localStorage.setItem('clicked84', true); this.classList.remove('tada');">
+		<li id="logobutton" class="dropdown li">
 			<a class="dropbtn cornerlogo">
 				<img src="css/HorangHill.png" style="width: 18px;">
 			</a>
@@ -63,7 +63,6 @@
 			<div class="dropdown-content">
 				<a onclick="camera.position.z += 1;"><span>Zoom Out</span></a>
 				<a onclick="camera.position.z -= 1;"><span>Zoom In</span></a>
-				<a onclick="openExplorer()"><span>Explorer</span></a>
 			</div>
 		</li>
 
@@ -74,13 +73,14 @@
 				<a onclick="redo()"><span>Redo</span></a>
 				<a><span>Snap to Grid</span> <input type="checkbox" onclick="setSnapping(this.checked)" id="snaptogrid"
 						checked></a>
+				<a><span>Click to Select</span> <input type="checkbox" id="clicktosel"></a>
 			</div>
 		</li>
 
 		<li class="dropdown li">
 			<a class="dropbtn"><span>Help</span></a>
 			<div class="dropdown-content">
-				<a><span>HorangHill Editor v2.0.0</span></a>
+				<a><span>HorangHill Editor v2.0.5</span></a>
 				<a><span>Translations are automated and may be inaccurate.</span></a>
 				<a><select name="languages" id="languages" onchange="changeLang(this.value)">
 						<option value="am">Amharic</option>
@@ -145,21 +145,13 @@
 	</ul>
 	<div id="sidecontainer">
 		<div id="sideButtons">
-			<button title="Explorer" onclick="openExplorer()">
-				<i class="fa-solid fa-list"></i>
-			</button>
-
-			<button class="separator">
-				<hr>
-			</button>
-
-			<button title="Move" onclick="transformControls.setMode('translate');">
+			<button title="Move" id="transformMove">
 				<i class="fa-solid fa-up-down-left-right"></i>
 			</button>
-			<button title="Rotate" onclick="transformControls.setMode('rotate');">
+			<button title="Rotate" id="transformRotate">
 				<i class="fa-solid fa-rotate"></i>
 			</button>
-			<button title="scale" onclick="transformControls.setMode('scale');">
+			<button title="scale" id="transformScale">
 				<i class="fa-solid fa-maximize"></i>
 			</button>
 
@@ -183,6 +175,10 @@
 				onclick="addElem.terrain(2, prompt('Enter terrain size...'), prompt('Enter terrain color... (in hex)'))">
 				<i class="fa-solid fa-mountain"></i>
 			</button>
+			<button title="Import Object File"
+				onclick="addElem.importGLTFModel(0,0,0)">
+				<i class="fa-solid fa-object-group"></i>
+			</button>
 
 			<button class="separator">
 				<hr>
@@ -196,12 +192,12 @@
 			</button>
 		</div>
 	</div>
-	<div id="inspector" style="width: 0vw; border-width: 0px;">
-		<div id="inspectorcontent">
+	<div id="explorer">
+		<div id="explorercontent" class="sidebarContent">
 		</div>
 	</div>
-	<div id="explorer" style="width: 0vw; border-width: 0px;">
-		<div id="explorercontent">
+	<div id="details">
+		<div id="detailscontent" class="sidebarContent">
 		</div>
 	</div>
 </body>
