--- a/player/index.html
+++ b/player/index.html
@@ -30,9 +30,9 @@
     <script type="text/javascript" src="js/playerModel.js"></script>
     <script type="text/javascript" src="js/playerObject.js" defer></script>
     <script type="text/javascript" src="js/index.js" defer></script>
-    <script type="text/javascript" src="js/fontawesome.js" defer></script>
     <script type="text/javascript" src="js/firebaseMapLoader.js" defer></script>
-    <script type="text/javascript" src="js/joy.js"></script>
+    <script type="text/javascript" src="../js/deps/fontawesome.js" defer></script>
+    <script type="text/javascript" src="../js/deps/joy.js"></script>
 </head>
 
 <body id="section">
