--- a/index.html
+++ b/index.html
@@ -197,11 +197,14 @@
 		</div>
 	</div>
 	<div id="explorer">
-		<div id="explorercontent" class="sidebarContent">
+		<div class="sidebarContent">
+			<select multiple id="explorercontent"></select>
 		</div>
 	</div>
 	<div id="details">
 		<div id="detailscontent" class="sidebarContent">
+			<h3>Inspect</h3>
+			<span>Select something on the explorer to edit its properties here!</span>
 		</div>
 	</div>
 </body>
