spawn static mesh spawn buttons on sidebar

--- a/index.html
+++ b/index.html
@@ -159,18 +159,7 @@
 				<hr>
 			</button>
 
-			<button title="Add Cube" onclick="addElem.cube(0,0,0,1,1,1,'#ff0000')">
-				<i class="fa-solid fa-cube"></i>
-			</button>
-			<button title="Add Spawn Node" onclick="addElem.spawnnode(0,0,0,1.5,0.25,1.5,'#808080')">
-				<i class="fa-solid fa-flag"></i>
-			</button>
-			<button title="Add Cylinder" onclick="addElem.cylinder(0,0,0,0.1,0.1,0.1,'#ff0000')">
-				<i class="fa-solid fa-circle-half-stroke"></i>
-			</button>
-			<button title="Add Sphere" onclick="addElem.sphere(0,0,0,1,1,1,'#ff0000')">
-				<i class="fa-solid fa-circle-half-stroke"></i>
-			</button>
+			<div id="spawnIcon"></div>
 			<button title="Add Light" onclick="addElem.light(0,0,0,10,10,'#ffffff')">
 				<i class="fa-solid fa-lightbulb"></i>
 			</button>
