--- a/player/index.html
+++ b/player/index.html
@@ -27,7 +27,8 @@
     <script type="text/javascript" src="../js/three/three-to-cannon.js"></script>
     <script type="text/javascript" src="../js/addShapes.js" defer></script>
     <script type="text/javascript" src="../js/sceneLoader.js" defer></script>
-
+    
+    <script type="text/javascript" src="js/playerAPI.js"></script>
     <script type="text/javascript" src="js/playerModel.js"></script>
     <script type="text/javascript" src="js/playerObject.js" defer></script>
     <script type="text/javascript" src="js/index.js" defer></script>
