add sanitize thing

--- a/player/index.html
+++ b/player/index.html
@@ -4,7 +4,7 @@
 <head>
     <title id="pagetitle">HorangHill Player</title>
     <link rel="stylesheet" href="style.css">
-	<link rel="icon" type="image/x-icon" href="../css/HorangHill.png">
+    <link rel="icon" type="image/x-icon" href="../css/HorangHill.png">
 
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-database.js"></script>
@@ -27,13 +27,14 @@
     <script type="text/javascript" src="../js/three/three-to-cannon.js"></script>
     <script type="text/javascript" src="../js/addShapes.js" defer></script>
     <script type="text/javascript" src="../js/sceneLoader.js" defer></script>
-    
+
     <script type="text/javascript" src="js/playerAPI.js"></script>
     <script type="text/javascript" src="js/playerModel.js"></script>
     <script type="text/javascript" src="js/playerObject.js" defer></script>
     <script type="text/javascript" src="js/index.js" defer></script>
     <script type="text/javascript" src="js/firebaseMapLoader.js" defer></script>
     <script type="text/javascript" src="../js/deps/fontawesome.js" defer></script>
+    <script type="text/javascript" src="../js/deps/sanitize-html.js"></script>
     <script type="text/javascript" src="../js/deps/joy.js"></script>
 </head>
 
